# lofar_facet_selfcal

./: .gitignore  .pylintrc  BLsmooth.py  CITATION.cff  MSChunker.py  MeerKATlayout.csv  README.md  arguments.py  default_StokesV.lua  dirfinder.py  ds9facetgenerator.py  facetselfcal.py  flake8.cfg  getfreqs.py  ideas  lib_multiproc.py  lin2circ.py  plot_tecandphase.py  polconv.py  pyproject.toml  split_irregular_timeaxis.py  sub-sources-outside-region.py  vlass_search.py
.github/data/: A1775ddbox.reg  PSZ2G031.93+78.71.ds9.reg  config_dd.txt  directions.txt  dirtest1.h5  dirtest2.h5  fulljones1.h5  fulljones2.h5  test.ms-part0000-I-b0-w.tmp  test.ms-part0000-I-b0.tmp  test.ms-part0001-I-b0-m.tmp  test.ms-part0001-I-b0-w.tmp  test.ms-part0001-I-b0.tmp  test.ms-spw0-parted-meta.tmp  test.skymodel
.github/scripts/: test_h5_merger_output.py
.github/workflows/: test-help.yml
BusyWeek_TestSet.ms/: table.f0  table.f1  table.f2  table.f2_TSM0  table.f4
BusyWeek_TestSet.ms/ANTENNA/: table.f0
BusyWeek_TestSet.ms/FEED/: table.f0  table.f0i
BusyWeek_TestSet.ms/FIELD/: table.f0  table.f0i
BusyWeek_TestSet.ms/HISTORY/: table.f0
BusyWeek_TestSet.ms/LOFAR_ANTENNA_FIELD/: table.f0  table.f0i
BusyWeek_TestSet.ms/LOFAR_STATION/: table.f0
BusyWeek_TestSet.ms/OBSERVATION/: table.f0
BusyWeek_TestSet.ms/POINTING/: table.f0  table.f0i
documentation/: facetselfcal.md  h5_merger.md
facetselfcal/: arguments.py  main.py
facetselfcal/data/: example_config.txt  (+5 more)
h5_helpers/: h5_merger.py
install/: wrapper.py
old_functions/: lin2circ.py  lin2circ_functions.py
source_selection/: early_stopping.py  phasediff_output.py
submods/: BLsmooth.py  MSChunker.py  casa_flagshadowed.py  casa_importgmrt.py  casa_setjy.py  check_Ateam_separation_mod.py  ds9facetgenerator.py  fix_twopol_ms.py  fixuGMRT_revised.py  getfreqs.py  h5_merger.py  lib_multiproc.py  plot_tecandphase.py  plot_tecdelayphase.py  polconv.py  split_irregular_timeaxis.py  sub_sources_outside_region.py  uGMRTSetWeights.py  vlass_search.py
(+121 files in other folders)
