[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lofar_facet_selfcal"
version = "14.6.0"
description = "LOFAR facet selfcal"
requires-python = ">=3.9"

[project.scripts]
h5_merger = "submods.h5_merger:main"
facetselfcal = "facetselfcal.main:main"
sub_sources_outside_region = "submods.sub_sources_outside_region:main"
ds9facetgenerator = "submods.ds9facetgenerator:main"
image_score = "submods.source_selection.image_score:main"
download_NN = "submods.source_selection.download_neural_network:main"
get_config = "submods.fair_log.config:main"

[tool.setuptools]
packages = ["facetselfcal", "submods", "submods.h5_helpers", "submods.source_selection", "submods.fair_log", "facetselfcal.utils"]
include-package-data = true
